--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <h3 class="text-3xl font-bold">Involúcrate</h3>
                 <p class="mt-4 max-w-2xl mx-auto text-slate-300">Este es un proyecto de y para la comunidad. Si tienes preguntas, sugerencias o deseas apoyar, no dudes en contactarnos.</p>
                 <div class="mt-8">
-                     <a href="mailto:arturo.castorena@email.com" class="bg-indigo-600 hover:bg-indigo-500 text-white font-bold py-3 px-8 rounded-lg transition-colors">
+                     <a href="mailto:arturcastorena70.s@gmail.com" class="bg-indigo-600 hover:bg-indigo-500 text-white font-bold py-3 px-8 rounded-lg transition-colors">
                         Contactar por Correo
                     </a>
                 </div>
